src/test/ui/did_you_mean/issue-34337.nll.stderr
error[E0596]: cannot borrow `key` as mutable, as it is not declared as mutable
  --> $DIR/issue-34337.rs:6:9
   |
LL |     get(&mut key);
   |         ^^^^^^^^
   |         |
   |         cannot borrow as mutable
   |         try removing `&mut` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
